sharedir = join_paths(get_option('prefix'), 'share')
iconsdir = join_paths(sharedir, 'icons', 'hicolor')

install_data('com.github.rafostar.Clapper.svg',
  install_dir: join_paths(iconsdir, 'scalable', 'apps')
)
install_data('com.github.rafostar.Clapper.gschema.xml',
  install_dir: join_paths(sharedir, 'glib-2.0', 'schemas')
)
install_data('com.github.rafostar.Clapper.xml',
  install_dir: join_paths(sharedir, 'mime', 'packages')
)
install_data('com.github.rafostar.Clapper.desktop',
  install_dir: join_paths(sharedir, 'applications')
)
install_data('com.github.rafostar.Clapper.metainfo.xml',
  install_dir: join_paths(sharedir, 'metainfo')
)
